[Fix] Test Changes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <a href="pages/about.html" id="nav-about">About</a> 
         </nav>
         <main>
+
+            <h1>Test</h1>
         
         </main>
         <footer>
