[ADD] Projects and Image

--- a/pages/VideoGame/betSha.html
+++ b/pages/VideoGame/betSha.html
@@ -5,7 +5,12 @@
         <meta name="viewport" content="width-device-width, ininial-scale=1.0">
 
         <title>Portfolio - Video Games </title>
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../../css/styles.css">
+        <style>
+            img{
+                width: 450px; height: 250px;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
@@ -23,8 +28,8 @@
         <nav>
             <span class="nav-placeholder"></span> | 
             <a href="work.html" id="nav-work">Work</a> | 
-            <a class="active" id="nav-video">Video Games</a> | 
-            <a href="VideoGame/betSha.html" id="nav-BetSha">Between Shadows</a> |
+            <a href="../jeuVideo.html" id="nav-video">Video Games</a> | 
+            <a class="active" id="BetSha">Between Shadows</a> |
             <a id="nav-Dygna">Dygnamyte</a> |
             <a id="nav-Throne">Scavenger's Throne</a> |
             <a id="nav-Other">Other Projects</a>
@@ -32,14 +37,22 @@
             <a href="programmation.html" id="nav-code">Coding</a> -->
         </nav>
         <main>
-            <h2 style="text-decoration: underline;" id="titre-video">Video Game Projects</h2>
 
+            <h2 style="text-decoration: underline;" id="betSha">Between Shadows</h2>
+
+            <img src="../../images/BetweenShadows/Cover.png" alt="Cover"> 
+            <img src="../../images/BetweenShadows/FullView.png" alt="Cover"> 
+            <img src="../../images/BetweenShadows/Lumos.png" alt="Cover"> 
+            <img src="../../images/BetweenShadows/RuthAnim.png" alt="Cover"> 
+            <img src="../../images/BetweenShadows/Tree.png" alt="Cover"> 
+
+            <!--<a href="../../zip/BetweenShadowsPC.zip" download="download">BetweenShadowsPC</a>-->
         
         </main>
         <footer>
             © 2025 My Portfolio
         </footer>
         </div>
-        <script src="../javascript/javascript.js"></script>
+        <script src="../../javascript/javascript.js"></script>
     </body>
 </html>
