--- a/pages/VideoGame/betSha.html
+++ b/pages/VideoGame/betSha.html
@@ -46,7 +46,7 @@
             <img src="../../images/BetweenShadows/RuthAnim.png" alt="Cover"> 
             <img src="../../images/BetweenShadows/Tree.png" alt="Cover"> 
 
-            <!--<a href="../../zip/BetweenShadowsPC.zip" download="download">BetweenShadowsPC</a>-->
+            <a href="../../zip/BetweenShadowsPC.zip" download="download">BetweenShadowsPC</a>
         
         </main>
         <footer>
