[UPDATE] BetSha Page

--- a/pages/VideoGame/betSha.html
+++ b/pages/VideoGame/betSha.html
@@ -36,19 +36,65 @@
             <!-- <a href="theatre.html" id="nav-theatre">Theatre Design</a> | 
             <a href="programmation.html" id="nav-code">Coding</a> -->
         </nav>
-        <main>
 
-            <h2 style="text-decoration: underline;" id="betSha">Between Shadows</h2>
+<main class="mainPresentation">
 
-            <img src="../../images/BetweenShadows/Cover.png" alt="Cover"> 
-            <img src="../../images/BetweenShadows/FullView.png" alt="Cover"> 
-            <img src="../../images/BetweenShadows/Lumos.png" alt="Cover"> 
-            <img src="../../images/BetweenShadows/RuthAnim.png" alt="Cover"> 
-            <img src="../../images/BetweenShadows/Tree.png" alt="Cover"> 
+    <!-- Game Title -->
+    <h2 style="text-decoration: underline; text-align: center;" id="betSha">Between Shadows</h2>
 
-            <a href="../../zip/BetweenShadowsPC.zip" download="download">BetweenShadowsPC</a>
-        
-        </main>
+    <!-- Hero / Cover Section -->
+    <section class="sectionCover">
+        <img src="../../images/BetweenShadows/Cover.png" alt="Cover" class="cover-image" >
+        <p style="margin-top: 10px; font-size: 1.1em;">Step into a world where light and shadow collide in a mysterious adventure.</p>
+    </section>
+
+    <!-- Description / About Section -->
+    <section style="margin-bottom: 30px;">
+        <h3>About the Game</h3>
+        <p>
+            Between Shadows is a fantasy game where the player restores light to a darkened world. Explore beautifully crafted environments, solve puzzles, and uncover the story behind the shadows.
+        </p>
+    </section>
+
+    <!-- Screenshots / Media Gallery -->
+<section class="screenshots">
+    <table class="screenshots-table">
+        <tr>
+            <td>
+                <img src="../../images/BetweenShadows/FullView.png" alt="Full view">
+                <p>Explore the main environment.</p>
+            </td>
+            <td>
+                <img src="../../images/BetweenShadows/Lumos.png" alt="Lumos">
+                <p>Light powers reveal secrets.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="../../images/BetweenShadows/RuthAnim.png" alt="Ruth Animation">
+                <p>Meet Ruth, your guide.</p>
+            </td>
+            <td>
+                <img src="../../images/BetweenShadows/Tree.png" alt="Tree">
+                <p>Dynamic world elements.</p>
+            </td>
+        </tr>
+    </table>
+</section>
+
+
+
+    <!-- Download Section -->
+    <section style="text-align: center; margin-bottom: 30px;">
+        <a href="../../zip/BetweenShadowsPC.zip" download="BetweenShadowsPC" 
+           style="padding: 12px 25px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
+           Download Between Shadows PC
+        </a>
+        <p style="padding-top: 0.5vw ; font-size: 0.95em;">PC version, Windows only.</p>
+    </section>
+
+</main>
+
         <footer>
             © 2025 My Portfolio
         </footer>
