--- a/pages/VideoGame/dignamyte.html
+++ b/pages/VideoGame/dignamyte.html
@@ -29,20 +29,22 @@
             <span class="nav-placeholder"></span> | 
             <a href="work.html" id="nav-work">Work</a> | 
             <a href="../jeuVideo.html" id="nav-video">Video Games</a> | 
-            <a class="active" id="BetSha">Between Shadows</a> |
-            <a href="dignamyte.html" id="nav-Dygna">Dignamyte</a> |
+            <a href="betSha.html" id="BetSha">Between Shadows</a> |
+            <a class="active" id="nav-Dygna">Dignamyte</a> |
             <a href="scavengers.html" id="nav-Throne">Scavenger's Throne</a> |
             <a href="otherPro.html" id="nav-Other">Other Projects</a>
+            <!-- <a href="theatre.html" id="nav-theatre">Theatre Design</a> | 
+            <a href="programmation.html" id="nav-code">Coding</a> -->
         </nav>
 
 <main class="mainPresentation">
 
     <!-- Game Title -->
-    <h2 style="text-decoration: underline; text-align: center;" id="betSha">Between Shadows</h2>
+    <h2 style="text-decoration: underline; text-align: center;" id="betSha">Dignamyte</h2>
 
     <!-- Hero / Cover Section -->
     <section class="sectionCover">
-        <img src="../../images/BetweenShadows/Cover.png" alt="Cover" class="cover-image" >
+        <img src="../../images/Dygnamyte/Cover.png" alt="Cover" class="cover-image" >
         <p style="margin-top: 10px; font-size: 1.1em;">Step into a world where light and shadow collide in a mysterious adventure.</p>
     </section>
 
@@ -50,7 +52,6 @@
     <section style="margin-bottom: 30px;">
         <h3>About the Game</h3>
         <p>
-            Between Shadows is a fantasy game where the player restores light to a darkened world. Explore beautifully crafted environments, solve puzzles, and uncover the story behind the shadows.
         </p>
     </section>
 
@@ -59,22 +60,22 @@
     <table class="screenshots-table">
         <tr>
             <td>
-                <img src="../../images/BetweenShadows/FullView.png" alt="Full view">
-                <p>Explore the main environment.</p>
+                <img src="../../images/Dygnamyte/Scene2.jpg" alt="Scen2">
+                <p></p>
             </td>
             <td>
-                <img src="../../images/BetweenShadows/Lumos.png" alt="Lumos">
-                <p>Light powers reveal secrets.</p>
+                <img src="../../images/Dygnamyte/Scene.png" alt="Scene">
+                <p></p>
             </td>
         </tr>
-        <tr>
+                <tr>
             <td>
-                <img src="../../images/BetweenShadows/RuthAnim.png" alt="Ruth Animation">
-                <p>Meet Ruth, your guide.</p>
+                <img src="../../images/Dygnamyte/GameOver.png" alt="GameOver">
+                <p></p>
             </td>
             <td>
-                <img src="../../images/BetweenShadows/Tree.png" alt="Tree">
-                <p>Dynamic world elements.</p>
+                <img src="../../images/Dygnamyte/Explo.jpg" alt="Explo">
+                <p></p>
             </td>
         </tr>
     </table>
@@ -84,9 +85,9 @@
 
     <!-- Download Section -->
     <section style="text-align: center; margin-bottom: 30px;">
-        <a href="../../zip/BetweenShadowsPC.zip" download="BetweenShadowsPC" 
+        <a href="../../zip/Dignamyte.zip" download="DignamytePC" 
            style="padding: 12px 25px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
-           Download Between Shadows PC
+           Download Dignamyte PC
         </a>
         <p style="padding-top: 0.5vw ; font-size: 0.95em;">PC version, Windows only.</p>
     </section>
