--- a/pages/VideoGame/scavengers.html
+++ b/pages/VideoGame/scavengers.html
@@ -29,28 +29,27 @@
             <span class="nav-placeholder"></span> | 
             <a href="work.html" id="nav-work">Work</a> | 
             <a href="../jeuVideo.html" id="nav-video">Video Games</a> | 
-            <a class="active" id="BetSha">Between Shadows</a> |
+            <a href="betSha.html" id="BetSha">Between Shadows</a> |
             <a href="dignamyte.html" id="nav-Dygna">Dignamyte</a> |
-            <a href="scavengers.html" id="nav-Throne">Scavenger's Throne</a> |
+            <a class="active" id="nav-Throne">Scavenger's Throne</a> |
             <a href="otherPro.html" id="nav-Other">Other Projects</a>
         </nav>
 
 <main class="mainPresentation">
 
     <!-- Game Title -->
-    <h2 style="text-decoration: underline; text-align: center;" id="betSha">Between Shadows</h2>
+    <h2 style="text-decoration: underline; text-align: center;" id="betSha">Scavenger's Throne</h2>
 
     <!-- Hero / Cover Section -->
     <section class="sectionCover">
-        <img src="../../images/BetweenShadows/Cover.png" alt="Cover" class="cover-image" >
-        <p style="margin-top: 10px; font-size: 1.1em;">Step into a world where light and shadow collide in a mysterious adventure.</p>
+        <img src="../../images/ScavengersThrone/Cover.png" alt="Cover" class="cover-image" >
+        <p style="margin-top: 10px; font-size: 1.1em;"></p>
     </section>
 
     <!-- Description / About Section -->
     <section style="margin-bottom: 30px;">
         <h3>About the Game</h3>
         <p>
-            Between Shadows is a fantasy game where the player restores light to a darkened world. Explore beautifully crafted environments, solve puzzles, and uncover the story behind the shadows.
         </p>
     </section>
 
@@ -59,22 +58,22 @@
     <table class="screenshots-table">
         <tr>
             <td>
-                <img src="../../images/BetweenShadows/FullView.png" alt="Full view">
-                <p>Explore the main environment.</p>
+                <img src="../../images/ScavengersThrone/Gameview.png" alt="Full view">
+                <p></p>
             </td>
             <td>
-                <img src="../../images/BetweenShadows/Lumos.png" alt="Lumos">
-                <p>Light powers reveal secrets.</p>
+                <img src="../../images/ScavengersThrone/Raccoons.png" alt="Raccoons">
+                <p></p>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="../../images/BetweenShadows/RuthAnim.png" alt="Ruth Animation">
-                <p>Meet Ruth, your guide.</p>
+                <img src="../../images/ScavengersThrone/PropsGarden.png" alt="Garden">
+                <p></p>
             </td>
             <td>
-                <img src="../../images/BetweenShadows/Tree.png" alt="Tree">
-                <p>Dynamic world elements.</p>
+                <img src="../../images/ScavengersThrone/PropsShop.png" alt="Shop">
+                <p></p>
             </td>
         </tr>
     </table>
@@ -84,9 +83,9 @@
 
     <!-- Download Section -->
     <section style="text-align: center; margin-bottom: 30px;">
-        <a href="../../zip/BetweenShadowsPC.zip" download="BetweenShadowsPC" 
+        <a href="../../zip/Scavengers_Throne.zip" download="ScavengersThronePC" 
            style="padding: 12px 25px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
-           Download Between Shadows PC
+           Download Scavenger's Throne PC
         </a>
         <p style="padding-top: 0.5vw ; font-size: 0.95em;">PC version, Windows only.</p>
     </section>
