--- a/pages/VideoGame/otherPro.html
+++ b/pages/VideoGame/otherPro.html
@@ -35,7 +35,7 @@
             <a class="active" id="nav-Other">Other Projects</a>
         </nav>
 
-<main class="mainPresentation">
+<main>
 
     
     <h2 style="text-decoration: underline;" id="betSha">Other Projects</h2>
