--- a/pages/jeuVideo.html
+++ b/pages/jeuVideo.html
@@ -25,11 +25,9 @@
             <a href="work.html" id="nav-work">Work</a> | 
             <a class="active" id="nav-video">Video Games</a> | 
             <a href="VideoGame/betSha.html" id="nav-BetSha">Between Shadows</a> |
-            <a id="nav-Dygna">Dygnamyte</a> |
-            <a id="nav-Throne">Scavenger's Throne</a> |
-            <a id="nav-Other">Other Projects</a>
-            <!-- <a href="theatre.html" id="nav-theatre">Theatre Design</a> | 
-            <a href="programmation.html" id="nav-code">Coding</a> -->
+            <a href="VideoGame/dignamyte.html" id="nav-Dygna">Dignamyte</a> |
+            <a href="VideoGame/scavengers.html" id="nav-Throne">Scavenger's Throne</a> |
+            <a href="VideoGame/otherPro.html" id="nav-Other">Other Projects</a>
         </nav>
         <main>
             <h2 style="text-decoration: underline;" id="titre-video">Video Game Projects</h2>
