--- a/pages/VideoGame/dignamyte.html
+++ b/pages/VideoGame/dignamyte.html
@@ -27,7 +27,7 @@
         
         <nav>
             <span class="nav-placeholder"></span> | 
-            <a href="work.html" id="nav-work">Work</a> | 
+            <a href="../work.html" id="nav-work">Work</a> | 
             <a href="../jeuVideo.html" id="nav-video">Video Games</a> | 
             <a href="betSha.html" id="BetSha">Between Shadows</a> |
             <a class="active" id="nav-Dygna">Dignamyte</a> |
